# LearningSkinnedAnimation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
MyRenderer!!!/: geometry.cpp  geometry.h  graphic.h  imgui_main.cpp  imgui_sw.cpp  imgui_sw.h  main.cpp  mesh.cpp  mesh.h  public.h  tgaimage.cpp  tgaimage.h  tool.cpp  tool.h
